--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="@dimen/_100sdp"
     android:layout_margin="@dimen/_4sdp"
     android:elevation="@dimen/_5sdp"
     android:padding="@dimen/_4sdp"
@@ -11,11 +11,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_height="@dimen/_100sdp"
+        android:layout_margin="@dimen/_8sdp"
         android:orientation="vertical">
 
         <TextView
@@ -88,6 +85,7 @@
             android:id="@+id/change"
             android:layout_width="0dp"
             android:textSize="@dimen/_12ssp"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/change_txt"
             app:layout_constraintTop_toBottomOf="@id/change_txt"
@@ -133,17 +131,6 @@
 
             </LinearLayout>
         </LinearLayout>
-
-<!--        <TextView-->
-<!--            android:id="@+id/position"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginRight="@dimen/_10sdp"-->
-<!--            app:layout_constraintLeft_toRightOf="@id/change"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/position_txt"-->
-<!--            tools:text="304" />-->
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
